Prevent OOM due to caching values >1MB