@@ -3,7 +3,6 @@ package com.faforever.api.config;
 import com.faforever.api.config.elide.ElideConfig;
 import com.faforever.api.data.domain.Achievement;
 import com.faforever.api.data.domain.Avatar;
-import com.faforever.api.data.domain.AvatarAssignment;
 import com.faforever.api.data.domain.Clan;
 import com.faforever.api.data.domain.CoopMap;
 import com.faforever.api.data.domain.CoopResult;
@@ -14,7 +13,6 @@ import com.faforever.api.data.domain.Game;
 import com.faforever.api.data.domain.Leaderboard;
 import com.faforever.api.data.domain.LeaderboardRating;
 import com.faforever.api.data.domain.Map;
-import com.faforever.api.data.domain.MapStatistics;
 import com.faforever.api.data.domain.MapVersion;
 import com.faforever.api.data.domain.Mod;
 import com.faforever.api.data.domain.ModVersion;
@@ -31,9 +29,9 @@ import org.springframework.context.annotation.Profile;
 import org.springframework.web.servlet.HandlerMapping;
 
 import jakarta.servlet.http.HttpServletRequest;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 
 import static com.faforever.api.challonge.ChallongeController.CHALLONGE_READ_CACHE_NAME;
 import static com.faforever.api.featuredmods.FeaturedModService.FEATURED_MOD_FILES_CACHE_NAME;
@@ -45,34 +43,57 @@ import static java.util.concurrent.TimeUnit.MINUTES;
 @Profile(ApplicationProfile.PRODUCTION)
 public class CacheConfig {
 
+  /**
+   * To be used when there is only one "main" request (e.g. show full list) and not many deviations exist
+   */
+  private static final long SMALL_SIZE = 25;
+  /**
+   * To be used when there is one "main" request we want to cache (e.g. show full list) but there are
+   * deviating queries that might overwrite the main request.
+   */
+  private static final long MEDIUM_SIZE = 50;
+  /**
+   * To be used when many recurring calls expected (e.g. maps and mods in open lobbies)
+   */
+  private static final long BIG_SIZE = 100;
+
   @Bean
   public CacheManager cacheManager() {
     SimpleCacheManager cacheManager = new SimpleCacheManager();
-    cacheManager.setCaches(Arrays.asList(
+    cacheManager.setCaches(List.of(
       // Elide entity caches
       new CaffeineCache(ElideConfig.DEFAULT_CACHE_NAME, newBuilder().maximumSize(0).build()),
-      new CaffeineCache(Avatar.TYPE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(AvatarAssignment.TYPE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(Achievement.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
-      new CaffeineCache(Clan.TYPE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(CoopResult.TYPE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(CoopScenario.TYPE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(CoopMap.TYPE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(Event.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
-      new CaffeineCache(FeaturedMod.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
-      new CaffeineCache(Game.TYPE_NAME, newBuilder().expireAfterWrite(1, MINUTES).build()),
-      new CaffeineCache(Map.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
-      new CaffeineCache(MapVersion.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
-      new CaffeineCache(MapStatistics.TYPE_NAME, newBuilder().expireAfterWrite(1, MINUTES).build()),
-      new CaffeineCache(Mod.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
-      new CaffeineCache(ModVersion.TYPE_NAME, newBuilder().expireAfterWrite(60, MINUTES).build()),
+      buildCache(Avatar.TYPE_NAME, 5, MINUTES, SMALL_SIZE),
+      buildCache(Achievement.TYPE_NAME, 60, MINUTES, SMALL_SIZE),
+      buildCache(Clan.TYPE_NAME, 5, MINUTES, SMALL_SIZE),
+      buildCache(CoopResult.TYPE_NAME, 5, MINUTES, MEDIUM_SIZE),
+      buildCache(CoopScenario.TYPE_NAME, 5, MINUTES, SMALL_SIZE),
+      buildCache(CoopMap.TYPE_NAME, 5, MINUTES, MEDIUM_SIZE),
+      buildCache(Event.TYPE_NAME, 60, MINUTES, SMALL_SIZE),
+      buildCache(FeaturedMod.TYPE_NAME, 60, MINUTES, SMALL_SIZE),
+      buildCache(Game.TYPE_NAME, 2, MINUTES, BIG_SIZE),
+      buildCache(Map.TYPE_NAME, 60, MINUTES, BIG_SIZE),
+      buildCache(MapVersion.TYPE_NAME, 60, MINUTES, BIG_SIZE),
+      buildCache(Mod.TYPE_NAME, 60, MINUTES, BIG_SIZE),
+      buildCache(ModVersion.TYPE_NAME, 60, MINUTES, BIG_SIZE),
+
       // Other caches
-      new CaffeineCache(CHALLONGE_READ_CACHE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(FEATURED_MOD_FILES_CACHE_NAME, newBuilder().expireAfterWrite(5, MINUTES).build()),
-      new CaffeineCache(Leaderboard.TYPE_NAME, newBuilder().expireAfterWrite(1, MINUTES).build()),
-      new CaffeineCache(LeaderboardRating.TYPE_NAME, newBuilder().expireAfterWrite(1, MINUTES).build())
+      buildCache(CHALLONGE_READ_CACHE_NAME, 5, MINUTES, SMALL_SIZE),
+      buildCache(FEATURED_MOD_FILES_CACHE_NAME, 5, MINUTES, MEDIUM_SIZE),
+      buildCache(Leaderboard.TYPE_NAME, 2, MINUTES, SMALL_SIZE),
+      buildCache(LeaderboardRating.TYPE_NAME, 2, MINUTES, SMALL_SIZE)
     ));
     return cacheManager;
+  }
+
+  private CaffeineCache buildCache(String key, long duration, TimeUnit unit, long maxSize) {
+    return new CaffeineCache(
+      key,
+      newBuilder()
+        .expireAfterWrite(duration, unit)
+        .maximumSize(maxSize)
+        .build()
+    );
   }
 
   /**
